--- a/test.Rmd
+++ b/test.Rmd
@@ -41,7 +41,7 @@ Los datos proporcionados consisten de información cualitativa referente a eleme
 
 ### Metodología
 
-Para alcanzar lo planteado se emplearán técnicas de estadística inferencial y descriptiva, **inserte técnicas concretas a usar en los distintos ejercicios**
+Para alcanzar lo planteado se emplearán las siguientes técnicas de estadística inferencial y descriptiva: Intervalos de confianza, pruebas de hipótesis, pruebas de bondad de ajuste **inserte más técnicas concretas a usar en los distintos ejercicios**
 
 
 
@@ -89,19 +89,22 @@ Como se observo del resumen anterior, la dispersión en los datos entre los cuar
 ### Medidas de tendencia central
 
 ```{r}
+ mean(project_data$Attendance)
+ median(project_data$Attendance)
  var(project_data$Attendance)
  sd(project_data$Attendance)
 ```
 
--- Añadir observaciones
+Como podemos observar los shows tenían una asistencia media de 10473, valor que oscilaba principalmente entre 8326 y 12621 personas. Además, podemos observar que no hay presencia de datos extremas debido a que la diferencia entre la media y la mediana es pequeña.
 
 ### Medidas de dispersion
 
 ```{r}
 summary(project_data$Attendance)
+IQR(project_data$Attendance)
 ```
 
--- Añadir observaciones
+En este caso podemos encontrar un rango intercuartil de 4.04 lo que nos lleva a concluir que no hay una gran dispersión en el conjunto de datos.
 
 ```{r}
 par(mfrow= c(1,2))
@@ -109,26 +112,29 @@ recaudo_hist <- hist(project_data$Attendance,main="Histograma de concurrencia",x
 recaudo_bp <- boxplot(project_data$Attendance,main="Diagrama de caja de concurrencia",ylab="miles de personas")
 ```
 
--- Añadir observaciones
+De acuerdo a las gráficas podemos observar que la frecuencia mas alta se encuentra en el rango de las 11000 personas y la menor en el rango de las 6000.
 
 ## Semanas activas para las obras
 
 ### Medidas de tendencia central
 
 ```{r}
+mean(project_data$Playing.weeks)
+median(project_data$Playing.weeks)
 var(project_data$Playing.weeks)
 sd(project_data$Playing.weeks)
 ```
 
--- Añadir observaciones
+Con respecto a la cantidad de semanas activas podemos observar una media de 1340 y una mediana de 1442, por lo que a primera vista no existe una presencia de valores atípicos.
 
 ### Medidas de dispersion
 
 ```{r} 
 summary(project_data$Playing.weeks) 
+IQR(project_data$Playing.weeks) 
 ``` 
 
--- Añadir observaciones
+Para las semanas de actividad obtenemos un rango intercuartil de 400, podemos concluir que la 50% intermedio esta comprendido entre 1100 y 1500 lo que indica cierto nivel de dispersión.
 
 ```{r}
 par(mfrow= c(1,2))
@@ -136,7 +142,7 @@ recaudo_hist <- hist(project_data$Playing.weeks,main="Histograma de Semanas acti
 recaudo_bp <- boxplot(project_data$Playing.weeks,main="Diagrama de caja de ",ylab="Semanasa activas")
 ```
 
--- Añadir observaciones
+De acuerdo a las gráficas podemos observar la poca frecuencia de elementos alrededor de la mediana, y que la mayoría de los datos se concentran a partir del tercer cuartil.
 
 ## Número de obras nuevas 
 
